# metikoro-sim

./: .clang-format  .gitmodules  CMakeLists.txt
metikoro-lib/: CMakeLists.txt
metikoro-lib/src/: Action.cpp  Action.hpp  ActionGenerator.hpp  ActionPool.hpp  ActionPools.hpp  ActionSequence.hpp  ActionSequences.cpp  ActionSequences.hpp  Agent.hpp  AgentRandom.hpp  AgentRegistry.hpp  Anchor.cpp  Anchor.hpp  Anchors.hpp  Backend.hpp  BackendMemory.hpp  BackendRegistry.hpp  Board.hpp  BoardArea.hpp  BoardFrame.hpp  ConsoleColor.hpp  ConsoleWriter.hpp  Error.hpp  Field.hpp  FieldGrid.hpp  FrameField.hpp  GameLog.hpp  GameMove.hpp  GameResult.hpp  GameSimulator.hpp  GameState.hpp  GameTurn.hpp  GridOutput.hpp  OrbMove.cpp  OrbMove.hpp  OrbMoveGenerator.hpp  OrbMoves.cpp  OrbMoves.hpp  OrbPosition.hpp  OrbPositions.hpp  (+24 more)
metikoro-sim/: CMakeLists.txt  notes.md
metikoro-sim/src/: Application.hpp  Configuration.hpp  Console.hpp  main.cpp
metikoro-sqlite/: CMakeLists.txt
metikoro-sqlite/src/: SQLiteBackend.cpp  SQLiteBackend.hpp
sqlite3/: CMakeLists.txt
unittest/: CMakeLists.txt
unittest/src/: AnchorTest.cpp  AnchorsTest.cpp  BoardTest.cpp  FieldTest.cpp  GameStateTest.cpp  OrbMoveGeneratorTest.cpp  OrientationTest.cpp  OrientationsTest.cpp  RotationTest.cpp  StonePoolTest.cpp  StoneWiringTest.cpp  UtilitiesTest.cpp  main.cpp
