cmake_minimum_required(VERSION 3.22)
add_library(metikoro-lib
        src/Action.cpp
        src/Action.hpp
        src/ActionGenerator.hpp
        src/ActionPool.hpp
        src/ActionPools.hpp
        src/ActionSequence.hpp
        src/ActionSequences.cpp
        src/ActionSequences.hpp
        src/Agent.hpp
        src/AgentRandom.hpp
        src/AgentRegistry.hpp
        src/Anchor.cpp
        src/Anchor.hpp
        src/Anchors.hpp
        src/Backend.hpp
        src/BackendMemory.hpp
        src/BackendRegistry.hpp
        src/Board.hpp
        src/BoardArea.hpp
        src/BoardFrame.hpp
        src/ConsoleWriter.hpp
        src/Error.hpp
        src/Field.hpp
        src/FieldGrid.hpp
        src/FrameField.hpp
        src/GameLog.hpp
        src/GameMove.hpp
        src/GameResult.hpp
        src/GameSimulator.hpp
        src/GameState.hpp
        src/GameTurn.hpp
        src/GridOutput.hpp
        src/OrbMove.cpp
        src/OrbMove.hpp
        src/OrbMoveGenerator.hpp
        src/OrbMoves.cpp
        src/OrbMoves.hpp
        src/OrbPosition.hpp
        src/OrbPositions.hpp
        src/OrbTravelNode.hpp
        src/OrbTravelPoint.hpp
        src/OrbTravelSegment.hpp
        src/Orientation.hpp
        src/Orientations.hpp
        src/Player.hpp
        src/Position.hpp
        src/Rating.hpp
        src/RatingAdjustment.hpp
        src/RatingGame.hpp
        src/RatingPlayer.hpp
        src/ResourcePool.hpp
        src/Rotation.hpp
        src/Serializable.hpp
        src/Setup.hpp
        src/Stone.cpp
        src/Stone.hpp
        src/StoneElement.hpp
        src/StonePool.hpp
        src/StoneWiring.hpp
        src/StringLines.hpp
        src/Utilities.hpp
        src/Utilities.cpp
        src/RollingAverage.hpp
        src/ConsoleColor.hpp
)
target_compile_options(metikoro-lib PRIVATE -Wall -Wextra)
if (CMAKE_BUILD_TYPE MATCHES "Release")
    target_compile_options(metikoro-lib PRIVATE -O3)
endif ()
